package com.mb.transactionbackend;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class TransactionBackEndApplication {

	public static void main(String[] args) {

		SpringApplication.run(TransactionBackEndApplication.class, args);
	}

}
